--- a/main.tex
+++ b/main.tex
@@ -528,7 +528,7 @@ Since all devices are synchronized and share channel information, they can hop o
 decreasing interference and multipath fading, doing so in slotted channels to avoid collisions,
 thus avoiding retransmissions, usefull in industrial environments.\\
 
-\textbf{TWVS multichannel cluster tree PAN} (TMCTP).
+\textbf{TVWS multichannel cluster tree PAN} (TMCTP).
 A cluster tree network is a mesh of clusters, each with a coordinator,
 that can communicate with other clusters, forming a tree. The easiest is a single cluster,
 with a coordinator and end devices, but can be extended to multiple clusters
