update error writing

--- a/main.tex
+++ b/main.tex
@@ -561,7 +561,7 @@ can be of 3 types:
 
 \textbf{Data transfer to a coordinator} is managed in two ways depending on beacon enabled 
 or not. If synchronization \emph{beacons are enabled}, the device listens for the beacon, when found 
-it sinchronizes to the PAN, and sends the data frame to the coordinator at an appropriate 
+it synchronizes to the PAN, and sends the data frame to the coordinator at an appropriate 
 time.\\
 If \emph{not enabled} it transmits directly to the coordinator.\\
 
@@ -576,7 +576,7 @@ has no data, either indicates it on the returned ACK if requested by the device 
 Data Request, or in a Data Frame with zero payload.\\ 
 
 Data transfer \textbf{between two peer} devices is managed either by a device that constantly 
-recives or sichronizes with the sending device. In the first case the device attempts to 
+recives or synchronizes with the sending device. In the first case the device attempts to 
 send data when channel access is gained, in the second case other measures are taken to 
 achieve sync.\\
 
