--- a/main.tex
+++ b/main.tex
@@ -799,7 +799,7 @@ UWB should implement one of the following CCA methods (last 2 only for HRP UWB):
 \subsection{General}
 To be compliant with the standard\cite{10794632}, the PHY layer must implement support for at least one
 between the channels 0, 3 and 9. Within each there is support for at least 2 complex channels
-that have unique lenght 31 preamble codes. So the device must support the lenght 31 codes for
+each with an unique lenght 31 preamble codes. So the device must support the lenght 31 codes for
 each channel it implements.\\
 More specifically, the standard\cite{10794632} defines 16 frequency bands, each with 2 complex channels,
 if a band is choosen, the device must support both channels.\\
