--- a/main.tex
+++ b/main.tex
@@ -905,8 +905,8 @@ Each PAN in a HRP UWB channel is identified by a preamble code, the SYNC field i
 by symbols defined by a preamble code. Each \emph{preamble code} is a \emph{sequence of code 
 symbols} from a ternary alphabet (-1,0,1), and can be of lenght 31 or 127 (91 for ERDEV). 
 Each channel has a fixed amount of possible preamble codes. As previously stated data is sent 
-in bursts, each of $N_{cpb}$ contiguos chips, each of $N_{c}$ possible values (in this case 
-three, -1,0,1) of duration $T_{c}$. The SYNC field is composed by $N_{sync}$ repetitions of 
+in bursts, each of $N_{cpb}$ contiguos chips, each of $N_{c}$ possible values of duration 
+$T_{c}$. The SYNC field is composed by $N_{sync}$ repetitions of 
 the symbol $\mathbf{S}_i$, denoted by the code itself getting spread by a $\delta_{L}$ function,
 becoming then the symbol $\mathbf{S}_i$. So the code with index i ($\mathbf{C}_i$ table 16-7 
 16-8 16-9 of the std) spread over function $\delta_{L}$ (L = spreading factor, table 16-5 
