--- a/main.tex
+++ b/main.tex
@@ -330,7 +330,7 @@
 % use a multiple column layout for up to three different
 % affiliations
 \author{\IEEEauthorblockN{Gabriele Da Re}
-\IEEEauthorblockA{School of Computer Engineering\\
+\IEEEauthorblockA{School of Computer Science\\
 University of Padua\\
 Padua, Veneto, Italy\\
 Email: gabriele.dare00@gmail.com\\
